--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,50 @@
+# Node / PNPM / General Build Artifacts
+node_modules/
+.pnpm-store/
+
+# Build output
+dist/
+dist-ssr/
+build/
+out/
+*.local
+
+# TypeScript
+*.tsbuildinfo
+*.tsbuildinfo.*
+
+# Vite
+.vite/
+vite.config.ts.timestamp-*
+
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
+# Editor / OS files
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
+Thumbs.db
+
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
-*.sw?
+
+# ENV files (Important!)
+.env
+.env.*
+!.env.example
+
+# Monorepo / Workspace (for safety)
+apps/*/node_modules/
+apps/*/dist/
+packages/*/node_modules/
+packages/*/dist/
+
